# chatbot

./: README.md  pyproject.toml
bot/: chatbot-st.py  chatbot.py  chatbot_st.py  doc2txt.py  start.py
bot/Prototyp/: chatbot.py
bot/pages/: altenhein.py  bb.py  lehmstedt.py  rswk.py  zusammenfassung.py
bot/storage_altenhein/: default__vector_store.json  docstore.json  index_store.json
bot/storage_bb/: default__vector_store.json  docstore.json  index_store.json
bot/storage_lehmstedt/: index_store.json
bot/storage_rswk/: docstore.json  index_store.json
bot/storage_test/: default__vector_store.json  docstore.json
