[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Ramon Voges <r.voges@dnb.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.25"
openai = "^1.16.2"
argparse = "^1.4.0"
ipython = "^8.23.0"
llama-index-llms-perplexity = "^0.1.3"
llama-index-embeddings-huggingface = "^0.2.0"
streamlit = "^1.33.0"
docx2txt = "^0.8"
llama-index-llms-ollama = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
